--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,2 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Just a quick demo of getting started with Spreecommerce. Removing `gem spring` allows `rails g spree:install` to work.
+Why? ¯\_(ツ)_/¯ 
